[package]
name = "xai-sandbox-prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
nix = "0.31.1"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.0"
toml = "0.9.11"
wasmtime = "41.0.1"
